# PixelMapper

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
cmake/: asio.cmake  dearimgui.cmake  flecs.cmake  glad.cmake  glfw.cmake  glm.cmake  tinyxml2.cmake
src/: PixelMapper.cpp  PixelMapper.h  main.cpp
src/flecs-modules/: gfx.cpp  gfx.hpp  glfw.cpp  glfw.hpp
src/gui/: ImGuiCanvas.h  ImGuiHexView.h  PixelMapperGui.cpp
src/utils/: FlecsUtils.h  imguiconfig.h
